--- a/public/index.html
+++ b/public/index.html
@@ -27,24 +27,23 @@
         "I just saw a movie that changed my life",
         "shirts are 50% of at Macy's today"
       ];
-    
     </script>
 
-    <script>
-    
+    <!-- <script>
+
       var h1 = document.createElement("h1");
       h1.innerHTML = tweets[0];
       document.body.appendChild(h1);
 
-    </script>
+    </script> -->
 
-    <script type="text/jsx">
-    var tweet = React.createElement("h1",null,tweets[1])
+    <!-- <script type="text/jsx">
+    var tweet = React.createElement("h1",null,tweets[0])
     ReactDOM.render(
-      tweet, 
+      tweet,
       document.getElementById('root')
     );
-    </script>
+    </script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -55,6 +54,16 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-   
+    <script src="Tweets.js" type="text/jsx"></script>
+    <script src="Follow.js" type="text/jsx"></script>
+    <script src="Profile.js" type="text/jsx"></script>
+    <script src="Logo.js" type="text/jsx"></script>
+    <script src="Search.js" type="text/jsx"></script>
+    <script src="NavBar.js" type="text/jsx"></script>
+    <script src="Header.js" type="text/jsx"></script>
+    <script src="Main.js" type="text/jsx"></script>
+    <script src="App.js" type="text/jsx"></script>
+    <script src="Index.js" type="text/jsx"></script>
+
   </body>
 </html>
